# semgrep_reporting_tool

./: .gitignore  LICENSE  README.md  pyproject.toml
semgrep_reporter/: __init__.py  api.py  cli.py  client.py  config.py  reports.py
semgrep_reporter/models/: __init__.py  assistant.py  external.py  finding.py  location.py  policy.py  repository.py  rule.py
semgrep_reporter/reports/: __init__.py  charts.py  csv_report.py  excel_report.py  generator.py  pdf_report.py  utils.py
semgrep_reporter/templates/: report.html
tests/: test_api.py  test_cli.py  test_reports.py
